# focus-lock-rs

./: .gitignore  BEST_PRACTICES_IMPROVEMENTS.md  Cargo.toml  README.md
.cargo/: config.toml
cli/: Cargo.toml
cli/src/: main.rs
fancam-core/: Cargo.toml
fancam-core/src/: error.rs  lib.rs  mode.rs
fancam-core/src/detection/: mod.rs
fancam-core/src/discovery/: mod.rs
fancam-core/src/pipeline/: mod.rs
fancam-core/src/reid/: mod.rs
fancam-core/src/rendering/: mod.rs
fancam-core/src/runtime/: mod.rs
fancam-core/src/tracking/: mod.rs
fancam-core/src/video/: mod.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-window.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  queue.rs  storage.rs
ui/: package.json  tsconfig.json
ui-legacy/: index.html  package-lock.json  vite.config.ts
ui-legacy/src/: App.svelte
ui/src/: App.svelte
