[workspace]
members = [
    "fancam-core",
    "cli",
    "src-tauri",
]
resolver = "2"

[workspace.package]
version      = "0.1.0"
edition      = "2024"
authors      = ["focus-lock-rs"]
rust-version = "1.87"

# Shared dependency versions — pin here, reference with workspace = true in members
[workspace.dependencies]
# Video
ffmpeg-next = "8"

# Inference
ort = { version = "=2.0.0-rc.10", features = ["load-dynamic", "coreml"] }

# Frame manipulation (pure Rust)
image      = "0.25"
imageproc  = "0.26"

# Linear algebra (Kalman filter)
nalgebra = "0.33"

# CLI
clap        = { version = "4", features = ["derive"] }
indicatif   = "0.18"

# Async / utils
anyhow  = "1"
thiserror = "2"
tracing   = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Tauri
tauri       = { version = "2.10" }
tauri-build = { version = "2.5", features = [] }
tauri-plugin-dialog  = "2"
tauri-plugin-shell   = "2"
tauri-plugin-fs      = "2"
