[package]
name         = "cli"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
fancam-core  = { path = "../fancam-core" }
clap         = { workspace = true }
indicatif    = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
