[package]
name         = "fancam-core"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
rust-version.workspace = true

[features]
tauri = ["serde", "serde/derive"]

[dependencies]
ffmpeg-next  = { workspace = true }
ort          = { workspace = true }
image        = { workspace = true }
imageproc    = { workspace = true }
fast_image_resize = { workspace = true }
rayon        = { workspace = true }
nalgebra     = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
serde        = { workspace = true, optional = true }
