[package]
name    = "focus-lock"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
rust-version.workspace = true

[lib]
name = "focus_lock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "focus-lock"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri               = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-shell  = { workspace = true }
tauri-plugin-fs     = { workspace = true }
fancam-core         = { path = "../fancam-core", features = ["tauri"] }
serde               = { workspace = true }
serde_json          = { workspace = true }
tokio               = { workspace = true }
anyhow              = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
